# mlmpc-ring

./: CMakeLists.txt  CMakePresets.json  README.md
benchmarks/: bench_throughput.cpp
build-asan/: ALL_BUILD.vcxproj  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  bench_throughput.vcxproj  bench_throughput.vcxproj.filters  cmake_install.cmake  cpu_demo.vcxproj  cpu_demo.vcxproj.filters  mlmpmc_ring.sln  ring_main.vcxproj  ring_main.vcxproj.filters  test_correctness.vcxproj  test_correctness.vcxproj.filters  test_exactly_once.vcxproj  test_exactly_once.vcxproj.filters
build-asan/bench_throughput.dir/RelWithDebInfo/: bench_throughput.exe.recipe
build-asan/bench_throughput.dir/RelWithDebInfo/bench_throughput.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  bench_throughput.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build-asan/cpu_demo.dir/RelWithDebInfo/: cpu_demo.exe.recipe
build-asan/cpu_demo.dir/RelWithDebInfo/cpu_demo.tlog/: CL.command.1.tlog  CL.write.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build-asan/ring_main.dir/RelWithDebInfo/: ring_main.exe.recipe
build-asan/ring_main.dir/RelWithDebInfo/ring_main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build-asan/test_correctness.dir/RelWithDebInfo/: test_correctness.exe.recipe
build-asan/test_correctness.dir/RelWithDebInfo/test_correctness.tlog/: CL.command.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build-asan/test_exactly_once.dir/RelWithDebInfo/: test_exactly_once.exe.recipe
build-asan/test_exactly_once.dir/RelWithDebInfo/test_exa.56DE31E7.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build-asan/x64/RelWithDebInfo/ALL_BUILD/: ALL_BUILD.recipe
build-asan/x64/RelWithDebInfo/ZERO_CHECK/: ZERO_CHECK.recipe
build-vs2019/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  bench_throughput.vcxproj  bench_throughput.vcxproj.filters  cmake_install.cmake  cpu_demo.vcxproj  cpu_demo.vcxproj.filters  mlmpmc_ring.sln  ring_main.vcxproj  ring_main.vcxproj.filters  test_correctness.vcxproj  test_correctness.vcxproj.filters  test_exactly_once.vcxproj  test_exactly_once.vcxproj.filters
build-vs2019/bench_throughput.dir/Release/: bench_throughput.exe.recipe
build-vs2019/bench_throughput.dir/Release/bench_throughput.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build-vs2019/cpu_demo.dir/Release/: cpu_demo.exe.recipe
build-vs2019/ring_main.dir/Release/: ring_main.exe.recipe
build-vs2019/test_correctness.dir/Release/: test_correctness.exe.recipe
build-vs2019/test_exactly_once.dir/Release/: test_exactly_once.exe.recipe
demos/: cpu_demo.cpp  gpu_demo.cu
include/ring/: ring.hpp  ring_mpmc.hpp  ring_spsc.hpp  utils.hpp
tests/: test_correctness.cpp  test_exactly_once.cpp
(+36 files in other folders)
